# MSSP-Tools

./: README.md
Agentic-SDWAN-Workflow/: README.md
Agentic-SDWAN-Workflow/docs/: SDWAN-PROVISIONING-TRACKER.md  architecture-overview.md  pilot-guide.html  train-your-human.md
Agentic-SDWAN-Workflow/knowledge/: SDWAN-API-REFERENCE.md  SDWAN-CORPUS.md  SDWAN-QUICKSTART.md  SDWAN-SOLUTION-PACK-SKILLS.md  SDWAN-TOOL-TARGETS.md
Agentic-SDWAN-Workflow/nfrs/: NFR-025-COMPOSABLE-CONFIG-BLOCK-FRAMEWORK.md  NFR-026-ROCKY-LINUX-SDWAN-RULES-ENVIRONMENT.md  NFR-027-FORTIBOT-DEVICE-ONBOARDING.md
Agentic-SDWAN-Workflow/solution-pack/: DEVELOPER_ONBOARDING.md  SKILLS.md  solution-pack.yaml
Agentic-SDWAN-Workflow/templates/: ATOMIC_HUB_TEMPLATE.conf  ATOMIC_SPOKE_TEMPLATE.conf
Agentic-SDWAN-Workflow/tests/: qa_fortigate_ops_tests.py
FortiBot-NOC-CLI/: .gitignore  README.md  pyproject.toml  requirements.txt
FortiBot-NOC-CLI/fortibot/: __init__.py  ai.py  cli.py  config.py  onboard.py  tool_registry.py
FortiBot-NOC-CLI/fortibot/docs/: NOCBOT_Pilot_ManPage.md
FortiBot-NOC-CLI/fortibot/tools/: __init__.py  bandwidth.py  config_backup.py  firmware.py  fortiguard.py  ha_status.py  health_check.py  interface_status.py  network_analyzer.py  npu_status.py  reachability.py  routing.py  sdwan.py  sessions.py  ssh_cli.py  vpn.py
FortiFlex-Dev-Package/fortiflex-mssp-toolkit/: LICENSE  (+8 more)
FortiGate-CLI-Tool/: .gitignore  LICENSE  README.md  devices.csv.example  fortigate_cli.py
FortiGate-Interface-Hardening/: .gitignore  README.md  devices.csv.example  fortigate_harden_interfaces.py
FortiGate-Monitor-Tool/: .gitignore  FortiOS-Monitor-Script.py  LICENSE  README.md  fortigate_config.txt.example
FortiGate-OaaS-POC/: README.md  deploy.sh  teardown.sh
FortiWeb-AI-SDK/: .gitignore  README.md
FortiZTP/: .gitignore  LICENSE  README.md  credentials.yaml.template  requirements.txt
SOCaaS-SDK/: .gitignore  CONTRIBUTING.md  README.md  credentials.yaml.template  pyproject.toml  requirements.txt
SOCaaS-SDK/docs/: webhook-integration.md
SOCaaS-SDK/examples/: alert_poller.py  create_service_request.py  get_alert_details.py  list_alerts.py  list_clients.py  manage_comments.py
SOCaaS-SDK/socaas/: __init__.py  alerts.py  client.py  clients.py  comments.py  files.py  reports.py  service_requests.py
socaas-api-client-main/: .env.example  .gitignore  README.md  SOCaaSClient.py  getToken.sh  main.py  pyproject.toml  refreshToken.sh  test_sdk.py
(+155 files in other folders)
