[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortibot-noc"
version = "0.1.0"
description = "AI-Powered FortiGate NOC Diagnostics CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
    "paramiko>=3.0",
    "requests>=2.28",
    "urllib3>=1.26",
    "pyyaml>=6.0",
    "cryptography>=41.0",
]

[project.scripts]
fortibot = "fortibot.cli:main"

[tool.setuptools.packages.find]
include = ["fortibot*"]

[tool.setuptools.package-data]
fortibot = ["docs/*.md"]
