[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socaas-sdk"
version = "1.0.0"
description = "Python SDK for Fortinet SOCaaS (Security Operations Center as a Service) API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fortinet MSSP Partner Tools"}
]
keywords = ["fortinet", "socaas", "security", "mssp", "soc", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pyyaml>=5.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/fortinet/socaas-sdk"
"Documentation" = "https://github.com/fortinet/socaas-sdk#readme"
"Bug Tracker" = "https://github.com/fortinet/socaas-sdk/issues"

[tool.setuptools.packages.find]
include = ["socaas*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
